--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link
-         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-         rel="stylesheet"
-         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-         crossorigin="anonymous" />
-      <link
          rel="stylesheet"
          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
       <link rel="stylesheet" href="style.css" />
@@ -16,7 +11,7 @@
    </head>
    <body>
       <nav id="navbar">
-         <p>Junior Frontend Developer</p>
+         <h2>Junior Frontend Developer</h2>
          <ul class="p-0" id="nav-menu-list">
             <li><a href="#about-section">About me</a></li>
             <li><a href="#projects-section">Projects</a></li>
@@ -29,31 +24,45 @@
          </div>
       </nav>
       <div class="container">
-         <section id="home"></section>
-         <section id="about-section"></section>
+         <section id="about-section">
+            <div id="about-img"><img src="img/F-Zsolt_v2.png" /></div>
+            <div id="about-text">
+               <h1>About Me</h1>
+               <p>
+                  My passion for creating web applications has led me to explore the world of web
+                  development.
+               </p>
+               <p>
+                  I am currently learning junior frontend development and beside that I am also
+                  learning software development and testing.
+               </p>
+               <p>
+                  After I successfully complete the frontend training I will start a training called
+                  webdevelopment where I will learn the backend development for website programming.
+               </p>
+               <div id="social-links">
+                  <ul>
+                     <li>
+                        <a href="https://www.profession.hu/oneletrajz-profil">
+                           Profession &nbsp
+                           <i class="fa-solid fa-user-tie" id="profession-icon"></i>
+                        </a>
+                     </li>
+                     <li>
+                        <a href="https://www.linkedin.com/in/f%C3%BCl%C3%B6p-zsolt/">
+                           LinkedIn &nbsp
+                           <i class="fa-brands fa-linkedin" id="linkedin-icon"></i>
+                        </a>
+                     </li>
+                  </ul>
+               </div>
+            </div>
+         </section>
          <section id="projects-section"></section>
          <section id="contact-section"></section>
       </div>
 
-      <!-- <section id="about-section">
-         <div id="about-left"><img src="img/F-Zsolt.png" /></div>
-         <div id="about-container">
-            <h2>About Me</h2>
-            <p>
-               My passion for creating web applications has led me to explore the world of web
-               development.
-            </p>
-            <p>
-               I am currently learning junior frontend development and beside that I am also
-               learning software development and testing.
-            </p>
-            <p>
-               After I successfully complete the frontend traning I will start a traning called
-               webdevelopment where I will learn the backend development for website programming.
-            </p>
-         </div>
-      </section>
-
+      <!-- 
       <section id="project-section">
          <div id="project-container">
             <h1>Projects</h1>
@@ -134,10 +143,6 @@
       </section> -->
       <footer>@Copyright: Fülöp Zsolt 2023</footer>
       <script src="https://kit.fontawesome.com/73e46eb934.js" crossorigin="anonymous"></script>
-      <script
-         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-         crossorigin="anonymous"></script>
       <script src="script.js"></script>
    </body>
 </html>
