--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
             <li><a href="#contact-section">Contact</a></li>
          </ul>
          <div id="hamburger">
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <input type="checkbox" id="check" />
+            <label for="check" class="checkbtn">
                <i class="fa fa-bars"></i>
-            </a>
+               <i class="fa-solid fa-xmark"></i>
+            </label>
+            <div class="nav-mobile">
+               <a href="#">Home</a>
+               <a href="#">About me</a>
+               <a href="#">Projects</a>
+               <a href="#">Contact</a>
+            </div>
          </div>
       </nav>
       <div class="container">
