+ Projects section basic layout

--- a/index.html
+++ b/index.html
@@ -66,7 +66,21 @@
                </div>
             </div>
          </section>
-         <section id="projects-section"></section>
+         <section id="projects-section">
+            <h1>Projects</h1>
+            <div id="projects-container">
+               <div class="column" id="mechwart">
+                  <h2>Mechwart</h2>
+                  <div class="img"><img src="img/django.jpg" alt="" /></div>
+               </div>
+               <div class="column" id="ruander">
+                  <h2>Ruander</h2>
+                  <div class="img"><img src="img/frontend.jpg" alt="" id="ruander-imgs" /></div>
+                  <div class="button" onclick="prev()">⬅️</div>
+                  <div class="button" onclick="next()">➡️</div>
+               </div>
+            </div>
+         </section>
          <section id="contact-section"></section>
       </div>
 
