+ About my skills and full styling correction finished

--- a/teszt.html
+++ b/teszt.html
@@ -25,34 +25,91 @@
                      My passion for creating web applications has led me to explore the world of web
                      development.
                   </p>
-                  <p>Ide még kéne egy kevés szöveg!!!</p>
                </div>
-               <!-- <p>
+               <div id="fixed-button">
+                  <a
+                     href="CV/Zsolt-Fülöp_CV-EN.pdf"
+                     class="btn btn-dark highlight me-4"
+                     download="Zsolt-Fülöp_CV-EN.pdf">
+                     Download my CV
+                  </a>
+               </div>
+            </div>
+         </div>
+         <div class="scrollable-column">
+            <div class="scrollable-content-blocks p-3">
+               <h2 class="pb-1">About me</h2>
+               <p>
                   I am currently learning junior frontend development and beside that I am also
                   learning software development and testing.
                </p>
                <p>
                   After I successfully complete the frontend training I will start a training called
                   webdevelopment where I will learn the backend development for website programming.
-               </p> -->
-               <div id="fixed-buttons">
-                  <a
-                     href="CV/F_Zsolt_EN_CV.pdf"
-                     class="btn btn-dark highlight me-4"
-                     id="btn-cv"
-                     download="F_Zsolt_EN_CV.pdf">
-                     Download my CV
-                  </a>
-                  <a class="btn btn-dark highlight ms-3" id="btn-hire" href="#">Hire me</a>
+               </p>
+            </div>
+            <div class="scrollable-content-blocks p-3">
+               <h2 class="pb-1">About my skills</h2>
+               <ul>
+                  <li><h4>Primary skills</h4></li>
+               </ul>
+               <div id="primary-skills-container">
+                  <div class="skill-logo-container">
+                     <img src="img/logos/angular.png" id="skill-logos" />
+                  </div>
+                  <div class="skill-logo-container">
+                     <img src="img/logos/typescript.png" id="skill-logos" />
+                  </div>
+                  <div class="skill-logo-container">
+                     <img src="img/logos/node.png" id="skill-logos" />
+                  </div>
+                  <div class="skill-logo-container">
+                     <img src="img/logos/php.png" id="skill-logos" />
+                  </div>
+                  <div class="skill-logo-container">
+                     <img src="img/logos/html.png" id="skill-logos" />
+                  </div>
+                  <div class="skill-logo-container double-img-container">
+                     <img src="img/logos/css.png" class="double-img" id="skill-logos" />
+                     <img src="img/logos/bootstrap.png" id="skill-logos" />
+                  </div>
+                  <div class="skill-logo-container">
+                     <img src="img/logos/javascript.png" id="skill-logos" />
+                  </div>
+                  <div class="skill-logo-container double-img-container">
+                     <img src="img/logos/mongodb.png" class="double-img" id="skill-logos" />
+                     <img src="img/logos/sql.png" id="skill-logos" />
+                  </div>
+               </div>
+               <ul>
+                  <li><h4>Secondary skills</h4></li>
+               </ul>
+               <div id="secondary-skills-container">
+                  <div class="skill-logo-container">
+                     <img src="img/logos/django.png" id="skill-logos" />
+                  </div>
+                  <div class="skill-logo-container">
+                     <img src="img/logos/python.png" id="skill-logos" />
+                  </div>
+                  <div class="skill-logo-container">
+                     <img src="img/logos/jquery.png" id="skill-logos" />
+                  </div>
+                  <div class="skill-logo-container">
+                     <img src="img/logos/git.png" id="skill-logos" />
+                  </div>
                </div>
             </div>
-         </div>
-         <div class="scrollable-column p-3">
-            <h2>Scrollable Column</h2>
-            <div>About me</div>
-            <div>About my studies</div>
-            <div>About my skills</div>
-            <div>Contact me + social links</div>
+            <div class="scrollable-content-blocks p-3">
+               <h2 class="pb-1">Contact me + social links</h2>
+               <p>
+                  I am currently learning junior frontend development and beside that I am also
+                  learning software development and testing.
+               </p>
+               <p>
+                  After I successfully complete the frontend training I will start a training called
+                  webdevelopment where I will learn the backend development for website programming.
+               </p>
+            </div>
          </div>
       </div>
       <script
