--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
          rel="stylesheet"
          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
          crossorigin="anonymous" />
-      <link rel="stylesheet" href="teszt.css" />
+      <link rel="stylesheet" href="portfolio.css" />
       <title>Document</title>
    </head>
    <body>
@@ -100,15 +100,7 @@
                </div>
             </div>
             <div class="scrollable-content-blocks p-3">
-               <h2 class="pb-1">Contact me + social links</h2>
-               <p>
-                  I am currently learning junior frontend development and beside that I am also
-                  learning software development and testing.
-               </p>
-               <p>
-                  After I successfully complete the frontend training I will start a training called
-                  webdevelopment where I will learn the backend development for website programming.
-               </p>
+               <h2 class="pb-1">Contact me</h2>
             </div>
          </div>
       </div>
