--- a/portfolio.html
+++ b/portfolio.html
@@ -101,6 +101,29 @@
             </div>
             <div class="scrollable-content-blocks p-3">
                <h2 class="pb-1">Contact me</h2>
+               <form>
+                  <div class="form-group">
+                     <label for="name">Your name</label>
+                     <input type="text" name="name" class="form-control" id="name" />
+                  </div>
+                  <div class="form-group">
+                     <label for="company">Company name</label>
+                     <input type="text" name="company" class="form-control" id="company" />
+                  </div>
+                  <div class="form-group">
+                     <label for="inputEmail4">Email</label>
+                     <input type="email" class="form-control" id="inputEmail4" />
+                  </div>
+                  <div class="form-group">
+                     <label for="subject">Subject</label>
+                     <input type="" name="subject" class="form-control" id="subject" />
+                  </div>
+                  <div class="form-group">
+                     <label for="email-text">Your Message</label>
+                     <textarea class="form-control" id="email-text" rows="5"></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-primary my-1">Send message</button>
+               </form>
             </div>
          </div>
       </div>
