+ Adding basic click event for copy to clipboard

--- a/portfolio.html
+++ b/portfolio.html
@@ -101,29 +101,26 @@
             </div>
             <div class="scrollable-content-blocks p-3">
                <h2 class="pb-1">Contact me</h2>
-               <form>
-                  <div class="form-group">
-                     <label for="name">Your name</label>
-                     <input type="text" name="name" class="form-control" id="name" />
+               <div class="social-link-container"
+                  ><p class="m-0">Email:</p>
+                  <div class="span-container">
+                     <span class="social-links" id="email">fulopzsolt1999@gmail.com</span
+                     ><span id="email-bubble"></span> </div
+               ></div>
+               <div class="social-link-container">
+                  <p class="m-0">GitHUB:</p>
+                  <div class="span-container">
+                     <span class="social-links" id="github"
+                        >https://github.com/fulopzsolt1999?tab=repositories</span
+                     ><span id="github-bubble"></span>
                   </div>
-                  <div class="form-group">
-                     <label for="company">Company name</label>
-                     <input type="text" name="company" class="form-control" id="company" />
-                  </div>
-                  <div class="form-group">
-                     <label for="inputEmail4">Email</label>
-                     <input type="email" class="form-control" id="inputEmail4" />
-                  </div>
-                  <div class="form-group">
-                     <label for="subject">Subject</label>
-                     <input type="" name="subject" class="form-control" id="subject" />
-                  </div>
-                  <div class="form-group">
-                     <label for="email-text">Your Message</label>
-                     <textarea class="form-control" id="email-text" rows="5"></textarea>
-                  </div>
-                  <button type="submit" class="btn btn-primary my-1">Send message</button>
-               </form>
+               </div>
+               <div class="social-link-container"
+                  ><p class="m-0">LinkedIn:</p>
+                  <div class="span-container">
+                     <span class="social-links" id="linkedin">www.linkedin.com/in/fülöp-zsolt</span
+                     ><span id="linkedin-bubble"></span> </div
+               ></div>
             </div>
          </div>
       </div>
@@ -131,5 +128,6 @@
          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
          crossorigin="anonymous"></script>
+      <script src="portfolio.js"></script>
    </body>
 </html>
