+ Prevent bot spams

--- a/portfolio.html
+++ b/portfolio.html
@@ -104,14 +104,15 @@
                <div class="social-link-container"
                   ><p class="m-0">Email:</p>
                   <div class="span-container">
-                     <span class="social-links" id="email">fulopzsolt1999@gmail.com</span
+                     <span class="social-links" id="email"
+                        ><span class="blockspam" aria-hidden="true">PLEASE GO AWAY!</span
+                        >fulop<!-- fhetydagzzzgjds -->zsolt1999@<!-- sdfjsdhfkjypcs -->gma<!-- asjoxp -->il.com</span
                      ><span id="email-bubble"></span> </div
                ></div>
                <div class="social-link-container">
                   <p class="m-0">GitHUB:</p>
                   <div class="span-container">
-                     <span class="social-links" id="github"
-                        >https://github.com/fulopzsolt1999?tab=repositories</span
+                     <span class="social-links" id="github">https://github.com/fulopzsolt1999</span
                      ><span id="github-bubble"></span>
                   </div>
                </div>
